# divbase

./: .coveragerc  .coveragerc.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.adoc  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml  sitemap.xml
.github/: .markdownlint.yaml
.github/workflows/: build-pypi-packages.yaml  db-migration-validation.yaml  precommit.yaml  publish-cli-test-pypi.yaml  publish-to-pypi.yaml  publish-to-test-pypi.yaml  publish_dev_images.yaml  publish_docs.yaml  publish_images.yaml  pytest-on-image-build.yaml  release.yaml  trivy-fs-scan.yaml  trivy-image-scan.yaml
CONTRIBUTING/: index.html
SECURITY/: index.html
adr/: 001-initial-system-design.md  002-API-design.md  003-concurrency-strategy.md
assets/diagrams/: bcftools_task_logic_flow_full.mermaid  bcftools_task_logic_flow_simplified.mermaid  celery_task_implementation_sequence_diagram.mermaid  task_history_id_sequence_diagram.mermaid  task_history_project_sequence_diagram.mermaid  task_history_user_sequence_diagram.mermaid  vcf_query_processing_for_user_guide.mermaid
bcftools-query-(un)supported-use-cases/: index.html
charts/bitnami-minio/: values-local.yaml  values-scilifelab-2-dev.yaml  values.yaml
cli/: index.html
development/: index.html
development/api/: index.html
development/bcftools_task_constraints/: index.html
development/bcftools_task_logic/: index.html
development/celery_task_implementation/: index.html
development/database-migrations/: index.html
development/deployment/: index.html
development/documentation/: index.html
development/key_design_decisions_related_to_vcf_files/: index.html
development/metadata_queries/: index.html
development/monitoring_and_observability/: index.html
development/personal_access_tokens/: index.html
development/s3_transfers/: index.html
development/sending-emails/: index.html
development/setup/: index.html
development/task_history_implementation/: index.html
development/testing/: index.html
docker/: benchmarking.dockerfile  divbase_compose.tests.ci.yaml  divbase_compose.tests.coverage.yaml  divbase_compose.tests.yaml  divbase_compose.yaml  docker-compose.yaml  fastapi.dockerfile  flower.dockerfile  job_system_compose.tests.yaml  job_system_compose.yaml  monitoring_compose.yaml  prometheus.yml  s3_cron_service_account_policy.json  s3_service_account_policy.json  tools.dockerfile  worker.dockerfile
docs/: CONTRIBUTING.md  SECURITY.md  bcftools-query-(un)supported-use-cases.md  bitnami-minio-setup.adoc  bitnami-minio-setup.md  celery_task_implementation.md  database_migrations.md  index.md  sending_emails.md  task_history_list_sequence_diagram.mermaid  using_divbase_cli.md
policies_permissions/: README.adoc
releases/: index.html
scripts/: assign_bucket_policy  build_docs.py  calculate_dimensions_of_vcf.py  generate_mock_sample_metadata.py  local_dev_api_setup.py  local_dev_setup.py  local_k3d_dev_setup.py  run_e2e_coverage.sh  run_mouse_vcf_job.py  run_tests_with_coverage.sh  set_divbase_version.py  setup_commands.adoc  tsv_to_dataframe.py
search/: search_index.json
src/api/: pyproject.toml
src/api/divbase_api/: __main__.py
src/cli/: pyproject.toml
src/cli/divbase_tools/: services.py  user_config.py  utils.py
src/cli/divbase_tools/cli/: file_cli.py  query_cli.py  version_cli.py
src/lib/: pyproject.toml
src/lib/divbase_lib/: bucket_versioning.py  s3_client.py  utils.py
tests/: cli_settings.txt  conftest.py  minio_setup.py  test_user_config.py
user-guides/: index.html
(+247 files in other folders)
