[project]
name = "divbase_tools"
version = "0.1.0"
# Note pypi does not like AsciiDoc, may want to change to .md or .rst
readme = { file = "README.adoc", content-type = "text/plain" }
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.15",
    "minio==7.2.15",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "typer>=0.15.4",
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
